--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^2.10.1",
     "eslint-plugin-react": "^5.1.1",
     "webpack": "^1.13.0"
   }
