--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node server.js",
+		"postinstall": "webpack",
     "build": "webpack --watch"
   },
   "repository": {
