--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node server.js",
-    "postinstall": "webpack",
+    "postinstall": "webpack --config prod.webpack.config.js",
     "build": "webpack --watch"
   },
   "repository": {
