--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.10.1",
     "eslint-plugin-react": "^5.1.1",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   }
 }
