Create readme, add eslint to npm test
The new readme covers the basics of installing it locally and running
the build.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Connect four by gunDB",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "eslint src/ --fix",
     "start": "node server.js",
     "postinstall": "webpack --config prod.webpack.config.js",
     "build": "webpack --watch"
