Fix lint errors, refactor some code
Since first writing this project, I've learned more about react best
practices and eslint. I've gone through and fixed some of the hacky
areas (like eslint-disable no-unused-vars), added propType validation,
removed some dead code, and at least made the hacky (but necessary)
state mutations consistent. As soon as gun has the ability to `.off` a
chain (gun v0.5), I'll remove the `this.unmounted` checks.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js",
     "postinstall": "webpack --config webpack.prod.js",
     "build": "webpack",
+    "build:prod": "webpack --config webpack.prod.js",
     "dev": "npm run build -- --watch"
   },
   "repository": {
